--- a/_posts/2017-07-05-sublime.md
+++ b/_posts/2017-07-05-sublime.md
@@ -3,7 +3,7 @@ layout: post
 title: Sublime安装与常用配置
 date: 2017-07-05 14:06:38
 categories: Tools
-tags: Tools Other
+tags: tools other
 author: renshuo
 mathjax: true
 ---
