修改分类和标签

--- a/_posts/2017-07-05-sublime.md
+++ b/_posts/2017-07-05-sublime.md
@@ -2,8 +2,8 @@
 layout: post
 title: Sublime安装与常用配置
 date: 2017-07-05 14:06:38
-categories: Tools
-tags: tools other
+categories: 工具
+tags: 工具 编辑器
 author: renshuo
 mathjax: true
 ---
