--- a/_posts/2017-07-05-sublime.md
+++ b/_posts/2017-07-05-sublime.md
@@ -29,6 +29,16 @@ mathjax: true
 
 ## 通用配置
 
+### 设置Tab 键为 4 个空格
+` Preferences -> Settings - User`
+
+``` json
+"tab_size": 4,  
+"translate_tabs_to_spaces": true   
+```
+
+
+
 ### 安装插件
 
 只是介绍常用几款插件，更具体的插件可以按照自己的需要进行配置。
