计算机网络前三章

--- a/_posts/2017-08-10-intellij.md
+++ b/_posts/2017-08-10-intellij.md
@@ -61,6 +61,7 @@ mathjax: true
 - 代码注释跟随在代码头部：`Editor -> Code Style -> Java -> Comment Code`
 - IntelliJ IDEA启动选项：`Appearance&Behavio -> Reopen last project on startup`
 - `Project`的设置选项可以设置隐藏空白中间文件夹和自动定位到当期编辑文件位置等
+- 文件的换行符使用 Unix 格式 `Editor -> Code Style`中的`Line separator(for new files)` 选择`Unix and OSX(\n)`
 
 ## 快捷键
 
