按照标准修改文件名

--- a/_posts/2017-07-05-sublime.md
+++ b/_posts/2017-07-05-sublime.md
@@ -68,3 +68,14 @@ mathjax: true
   **标签自动长度** ：`"soda_tabs_autowidth" : true`
 
   **长方形滚动条** ：`"soda_rect_scrollbars": true`
+
+### 常用快捷键
+
+| 快捷键              | 作用               |
+| ---------------- | ---------------- |
+| `Ctrl+Shift+↑/↓` | 替换移动上下行          |
+| `Ctrl+D`         | 选择单词，重复可选择下一相同单词 |
+| `Ctrl+X`         | 删除当前行            |
+| `Shift+Alt+数字`   | 编辑区分区            |
+| `Ctrl+Shift+V `  | 格式化粘贴            |
+
