--- a/_posts/2017-08-10-intellij.md
+++ b/_posts/2017-08-10-intellij.md
@@ -52,7 +52,10 @@ mathjax: true
 > - `Custom` 显示所有我们自行安装的插件。
 
 - CodeGlance：在编辑代码最右侧，显示一块代码小地图
+
 - WakaTime：记录和统计编程时间
+
+- Key Promoter X：键盘快捷键提示工具
 
 ## 细节设置
 
