添加 json 格式化sublime插件

--- a/_posts/2017-07-05-sublime.md
+++ b/_posts/2017-07-05-sublime.md
@@ -68,6 +68,8 @@ mathjax: true
 
   **长方形滚动条** ：`"soda_rect_scrollbars": true`
 
+* **Pretty JSON** 格式化 `json` 代码
+
 ### 常用快捷键
 
 | 快捷键              | 作用               |
