添加写作模板&更新chrome插件

--- a/_posts/2017-07-22-chrome.md
+++ b/_posts/2017-07-22-chrome.md
@@ -36,6 +36,7 @@ Dark Horizon
 * 网易邮箱
 * Anything to QRcode：生成二维码
 * GitHub with MathJax：将LaTeX代码显示为数学公式
+* Markdown Here：将内容渲染成 Markdown，用来写邮件很不错
 
 ## 搜索
 
