update idea setting

--- a/_posts/2017-08-10-intellij.md
+++ b/_posts/2017-08-10-intellij.md
@@ -21,12 +21,11 @@ mathjax: true
 
 - `idea.config.path=${user.home}/.IntelliJIdea/config`，该属性主要用于指向 IntelliJ IDEA 的个性化配置目录。
 - `idea.system.path=${user.home}/.IntelliJIdea/system`，该属性主要用于指向 IntelliJ IDEA 的系统文件目录，如果你的项目很多，则该目录会很大，如果你的 C 盘空间不够的时候，还是建议把该目录转移到其他盘符下。
+- 同时建议声明 `idea.plugins.path` 和 `idea.log.path` 的值，可以直接使用默认值。
 
 ## 界面
 
 - 显示`Toolbar` 和 `Tool Buttons`，在View菜单中打开
-- 主题修改`Settings -> Appearance -> theme`
-- 代码编辑字体修改`Editor -> Font`
 - 编辑区代码主题可以在[Color Themes](http://color-themes.com/?view=index)下载，使用方式可以参照网站`Help`
 - 文件编码修改`Editor -> File Encoding`可以都修改成`UTF-8`格式，对于 `Properties` 文件，重要属性 `Transparent native-to-ascii conversion`主要用于转换 `ascii`，一般都要勾选，不然 `Properties` 文件中的注释显示的都不会是中文。**对文件目录转换编码之前做好文件备份**
 
@@ -61,10 +60,11 @@ mathjax: true
 
 - 代码提示取消区分大小写`Editor -> General -> Code Completion`
 - 代码分组：右键标签`Split`
-- 代码注释跟随在代码头部：`Editor -> Code Style -> Java -> Comment Code`
+- 代码注释跟随在代码头部：`Editor -> Code Style -> Java -> Code Generation -> Comment Code`
 - IntelliJ IDEA启动选项：`Appearance&Behavio -> Reopen last project on startup`
 - `Project`的设置选项可以设置隐藏空白中间文件夹和自动定位到当期编辑文件位置等
 - 文件的换行符使用 Unix 格式 `Editor -> Code Style`中的`Line separator(for new files)` 选择`Unix and OSX(\n)`
+- `import`数量超过设置阈值，用`*`号代替：`Editor -> Code Style -> Java -> Imports`
 
 ## 快捷键
 
